# tlp_regression_model

./: .gitignore  README.md  pyproject.toml
data/: abs_mean_gradient_training_data.pkl
examples/: abs_mean_gradient_training_data.py  load_data.py  metric.py  multivariate_time_series_forecasting.py  univariate_time_series_forecasting.py
src/: config.py  tlp_regression_model.py  utils.py
src/development/: developing_multivariate_case.py  developing_multivariate_case_second_approach.py  developing_univariate_case.py
src/tlp_regression/: config.py  model_components.py  tlp_regression_model.py  utils.py
